tests/unit/default/syntax-error/020-create-table-parens-name-colon.x.t
---- IN ----
+%table(id:|
---- OUT ----
---- ERR ----
syntax: expected <name> after `...%table(id:` near `|` at position 11 - at line 1
---- EXIT ----
1
